--- a/AprendendoHTML/js.html
+++ b/AprendendoHTML/js.html
@@ -32,7 +32,7 @@
                     <li><a href="html.html">HTML</a></li>
                     <li><a href="css.html">CSS</a></li>
                     <li><a href="js.html">JavaScript</a></li>
-                    <li><a href="shellscript.html">Shel Script</a></li>
+                    <li><a href="shellscript.html">Shell Script</a></li>
                     <li><a href="vscode.html">Dicas VSCode</a></li>
                     <li><a href="tutoriais.html">Tutoriais em video</a></li>
                 </ul>
