--- a/AprendendoLayout/vscode.html
+++ b/AprendendoLayout/vscode.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aprendendo HTML</title>
+    <title>Aprendendo VS Code</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="topo">
-        <h1>Aprendendo HTML</h1>
+        <h1>Aprendendo VS Code</h1>
         <nav id="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
