Edição aba html e CSS e pastas tutoriais css

--- a/AprendendoLayout/html.html
+++ b/AprendendoLayout/html.html
@@ -42,101 +42,101 @@
                     <p><b>&lt;article&gt;</b> Define um artigo;</p>
                     <p><b>&lt;aside&gt;</b> Define o conteúdo além do conteúdo da página;</p>
                     <p><b>&lt;audio&gt;</b> Define o conteúdo de som;</p>
-                    <p>&lt;b&gt; Define um texto em negrito; (Possui o mesmo nível semântico que um SPAN, e também o estilo de negrito no texto, contudo, ele não da nenhuma importância para o texto marcado com ele.)</p>
-                    <p>&lt;base&gt; Define uma base URL para todos os links da página;</p>
-                    <p>&lt;bdo&gt; Define a direção do texto apresentado;</p>
-                    <p>&lt;blockquote&gt; Define uma citação longa;</p>
-                    <p>&lt;body&gt; Define o corpo da página;</p>
-                    <p>&lt;br&gt; Insere uma quebra de linha simples;</p>
-                    <p>&lt;button&gt; Define um botão de comando;</p>
-                    <p>&lt;canvas&gt; Define gráficos;</p>
-                    <p>&lt;caption&gt; Define o "caption" de uma tabela;</p>
-                    <p>&lt;cite&gt; Define uma citação;</p>
-                    <p>&lt;code&gt; Define o código de texto do computador;</p>
-                    <p>&lt;col&gt; Define os atributos da coluna da tabela;</p>
-                    <p>&lt;colgroup&gt; Define um grupo de colunas da tabela;</p>
-                    <p>&lt;command&gt; Define um botão de comando;</p>
-                    <p>&lt;datagrid&gt; Referências aos dados dinâmicos em Tree View ou tabelas;</p>
-                    <p>&lt;datalist&gt; Define uma lista suspensa (DropDown);</p>
-                    <p>&lt;dd&gt; Define uma descrição de definição;</p>
-                    <p>&lt;del&gt; Define um texto deletado;</p>
-                    <p>&lt;details&gt; Define detalhes de um elemento;</p>
-                    <p>&lt;dfn&gt; Define um termo de definição;</p>
-                    <p>&lt;dialog&gt; Define uma conversa ou pessoas falando;</p>
-                    <p>&lt;div&gt; Define uma seção no documento;</p>
-                    <p>&lt;dl&gt; Define uma lista de definição;</p>
-                    <p>&lt;dt&gt; Define um termo de definição;</p>
-                    <p>&lt;em&gt; Define um texto em ênfase;</p>
-                    <p>&lt;embed&gt; Define o conteúdo interativo ou plugin externo;</p>
-                    <p>&lt;fieldset&gt; Define um conjunto de campos (fieldset);</p>
-                    <p>&lt;figcaption&gt; Define o caption de uma imagem;</p>
-                    <p>&lt;figure&gt; Define um grupo de media e seus captions;</p>
-                    <p>&lt;footer&gt; Define o rodapé de uma página;</p>
-                    <p>&lt;form&gt; Define um formulário;</p>
-                    <p>&lt;h1&gt; até &lt;h6&gt; Define o cabeçalho 1 até o cabeçalho 6;</p>
-                    <p>&lt;head&gt; Define uma informação sobre o documento. (Não aceita mais elementos Child como filho);</p>
-                    <p>&lt;header&gt; Define o cabeçalho de uma página;</p>
-                    <p>&lt;hgroup&gt; Define informações sobre uma determinada área do documento;</p>
-                    <p>&lt;hr&gt; Define uma regra horizontal. (Tem o mesmo nível que um parágrafo, mas também é utilizado para fazer separações e quebras de linha);</p>
-                    <p>&lt;html&gt; Define um documento html;</p>
-                    <p>&lt;i&gt; Define um texto em itálico; (Possui o mesmo nível semântico que um SPAN. O texto continua sendo itálico e para usuários e leitores de tela, a voz utilizada é modificada para indicar ênfase. É de grande valor e utilidade para marcar termos técnicos, termos em outras linguagens, etc.);</p>
-                    <p>&lt;iframe&gt; Define uma linhas sobre a janela (frame);</p>
-                    <p>&lt;img&gt; Define uma imagem;</p>
-                    <p>&lt;input&gt; Define um campo de inserção;</p>
-                    <p>&lt;ins&gt; Define um texto inserido;</p>
-                    <p>&lt;kdb&gt; Define um texto do teclado;</p>
-                    <p>&lt;keygen&gt; Define a key (chave) do formulário;</p>
-                    <p>&lt;label&gt; Define uma "label" para o formulário;</p>
-                    <p>&lt;legend&gt; Define um título para os campos (fields);</p>
-                    <p>&lt;li&gt; Define os itens da lista;</p>
-                    <p>&lt;link&gt; Define uma referência;</p>
-                    <p>&lt;map&gt; Define uma imagem de mapa;</p>
-                    <p>&lt;mark&gt; Define a marcação de um texto;</p>
-                    <p>&lt;menu&gt; Define uma lista de "menus";</p>
-                    <p>&lt;meta&gt; Define informações meta;</p>
-                    <p>&lt;meter&gt; Define a medição dentro de um intervalo pré-definido;</p>
-                    <p>&lt;nav&gt; Define os links de navegação;</p>
-                    <p>&lt;noscript&gt; Define uma seção noscript;</p>
-                    <p>&lt;object&gt; Define um objeto incorporado;</p>
-                    <p>&lt;ol&gt; Define uma lista ordenada;</p>
-                    <p>&lt;optgroup&gt; Define um grupo de opção;</p>
-                    <p>&lt;option&gt; Define uma opção de lista suspensa (drop-down list);</p>
-                    <p>&lt;output&gt; Define os tipos de saída (outputs);</p>
-                    <p>&lt;p&gt; Define um parágrafo;</p>
-                    <p>&lt;param&gt; Define um parâmetro para determinado objeto;</p>
-                    <p>&lt;pre&gt; Define um texto pré-formatado;</p>
-                    <p>&lt;progress&gt; Define o prograsso de uma tarefa qualquer;</p>
-                    <p>&lt;q&gt; Define uma citação curta;</p>
-                    <p>&lt;rp&gt; Define o browser substituto para elementos não suportados pelo ruby;</p>
-                    <p>&lt;rt&gt; Define explicações para as anotações de ruby;</p>
-                    <p>&lt;ruby&gt; Define as anotações de ruby;</p>
-                    <p>&lt;s&gt; Define que um texto não é mais correto;</p>
-                    <p>&lt;samp&gt; Define um código de amostra;</p>
-                    <p>&lt;script&gt; Define um script;</p>
-                    <p>&lt;section&gt; Define uma área ou seção;</p>            
-                    <p>&lt;select&gt; Define uma lista selecionável;</p>
-                    <p>&lt;small&gt; Define um pequeno texto;</p>
-                    <p>&lt;source&gt; Define recursos de mídia;</p>
-                    <p>&lt;span&gt; Define uma seção no documento;</p>
-                    <p>&lt;strong&gt; Define um texto forte (similar ao negrito);</p>
-                    <p>&lt;style&gt; Define um estilo;</p>
-                    <p>&lt;sub&gt; Define um texto subscrito;</p>
-                    <p>&lt;sup&gt; Define um texto sobrescrito;</p>
-                    <p>&lt;summary&gt; Define o cabeçalho de dados "detalhe";</p>
-                    <p>&lt;table&gt; Define uma tabela;</p>
-                    <p>&lt;tbody&gt; Define o corpo da tabela;</p>
-                    <p>&lt;td&gt; Define uma célula da tabela;</p>
-                    <p>&lt;textarea&gt; Define uma área de texto;</p>
-                    <p>&lt;tfoot&gt; Define o rodapé da tabela;</p>
-                    <p>&lt;th&gt; Define o cabeçalho da tabela;</p>
-                    <p>&lt;thead&gt; Define o cabeçalho da tabela;</p>
-                    <p>&lt;time&gt; Define uma data ou uma hora;</p>
-                    <p>&lt;title&gt; Define o título do documento;</p>
-                    <p>&lt;tr&gt; Define uma linha da tabela;</p>
-                    <p>&lt;ul&gt; Define uma lista desordenada;</p>
-                    <p>&lt;var&gt; Define uma variável;</p>
-                    <p>&lt;video&gt; Define um vídeo;</p>
-                    <p>&lt;wbr&gt; Define uma possível quebra de linha;</p>
+                    <p><b>&lt;b&gt;</b> Define um texto em negrito; (Possui o mesmo nível semântico que um SPAN, e também o estilo de negrito no texto, contudo, ele não da nenhuma importância para o texto marcado com ele.)</p>
+                    <p><b>&lt;base&gt;</b> Define uma base URL para todos os links da página;</p>
+                    <p><b>&lt;bdo&gt;</b> Define a direção do texto apresentado;</p>
+                    <p><b>&lt;blockquote&gt;</b> Define uma citação longa;</p>
+                    <p><b>&lt;body&gt;</b> Define o corpo da página;</p>
+                    <p><b>&lt;br&gt;</b> Insere uma quebra de linha simples;</p>
+                    <p><b>&lt;button&gt;</b> Define um botão de comando;</p>
+                    <p><b>&lt;canvas&gt;</b> Define gráficos;</p>
+                    <p><b>&lt;caption&gt;</b> Define o "caption" de uma tabela;</p>
+                    <p><b>&lt;cite&gt;</b> Define uma citação;</p>
+                    <p><b>&lt;code&gt;</b> Define o código de texto do computador;</p>
+                    <p><b>&lt;col&gt;</b> Define os atributos da coluna da tabela;</p>
+                    <p><b>&lt;colgroup&gt;</b> Define um grupo de colunas da tabela;</p>
+                    <p><b>&lt;command&gt;</b> Define um botão de comando;</p>
+                    <p><b>&lt;datagrid&gt;</b> Referências aos dados dinâmicos em Tree View ou tabelas;</p>
+                    <p><b>&lt;datalist&gt;</b> Define uma lista suspensa (DropDown);</p>
+                    <p><b>&lt;dd&gt;</b> Define uma descrição de definição;</p>
+                    <p><b>&lt;del&gt;</b> Define um texto deletado;</p>
+                    <p><b>&lt;details&gt;</b> Define detalhes de um elemento;</p>
+                    <p><b>&lt;dfn&gt;</b> Define um termo de definição;</p>
+                    <p><b>&lt;dialog&gt;</b> Define uma conversa ou pessoas falando;</p>
+                    <p><b>&lt;div&gt;</b> Define uma seção no documento;</p>
+                    <p><b>&lt;dl&gt;</b> Define uma lista de definição;</p>
+                    <p><b>&lt;dt&gt;</b> Define um termo de definição;</p>
+                    <p><b>&lt;em&gt;</b> Define um texto em ênfase;</p>
+                    <p><b>&lt;embed&gt;</b> Define o conteúdo interativo ou plugin externo;</p>
+                    <p><b>&lt;fieldset&gt;</b> Define um conjunto de campos (fieldset);</p>
+                    <p><b>&lt;figcaption&gt;</b> Define o caption de uma imagem;</p>
+                    <p><b>&lt;figure&gt;</b> Define um grupo de media e seus captions;</p>
+                    <p><b>&lt;footer&gt;</b> Define o rodapé de uma página;</p>
+                    <p><b>&lt;form&gt;</b> Define um formulário;</p>
+                    <p><b>&lt;h1&gt;</b> até <b>&lt;h6&gt;</b> Define o cabeçalho 1 até o cabeçalho 6;</p>
+                    <p><b>&lt;head&gt;</b> Define uma informação sobre o documento. (Não aceita mais elementos Child como filho);</p>
+                    <p><b>&lt;header&gt;</b> Define o cabeçalho de uma página;</p>
+                    <p><b>&lt;hgroup&gt;</b> Define informações sobre uma determinada área do documento;</p>
+                    <p><b>&lt;hr&gt;</b> Define uma regra horizontal. (Tem o mesmo nível que um parágrafo, mas também é utilizado para fazer separações e quebras de linha);</p>
+                    <p><b>&lt;html&gt;</b> Define um documento html;</p>
+                    <p><b>&lt;i&gt;</b> Define um texto em itálico; (Possui o mesmo nível semântico que um SPAN. O texto continua sendo itálico e para usuários e leitores de tela, a voz utilizada é modificada para indicar ênfase. É de grande valor e utilidade para marcar termos técnicos, termos em outras linguagens, etc.);</p>
+                    <p><b>&lt;iframe&gt;</b> Define uma linhas sobre a janela (frame);</p>
+                    <p><b>&lt;img&gt;</b> Define uma imagem;</p>
+                    <p><b>&lt;input&gt;</b> Define um campo de inserção;</p>
+                    <p><b>&lt;ins&gt;</b> Define um texto inserido;</p>
+                    <p><b>&lt;kdb&gt;</b> Define um texto do teclado;</p>
+                    <p><b>&lt;keygen&gt;</b> Define a key (chave) do formulário;</p>
+                    <p><b>&lt;label&gt;</b> Define uma "label" para o formulário;</p>
+                    <p><b>&lt;legend&gt;</b> Define um título para os campos (fields);</p>
+                    <p><b>&lt;li&gt;</b> Define os itens da lista;</p>
+                    <p><b>&lt;link&gt;</b> Define uma referência;</p>
+                    <p><b>&lt;map&gt;</b> Define uma imagem de mapa;</p>
+                    <p><b>&lt;mark&gt;</b> Define a marcação de um texto;</p>
+                    <p><b>&lt;menu&gt;</b> Define uma lista de "menus";</p>
+                    <p><b>&lt;meta&gt;</b> Define informações meta;</p>
+                    <p><b>&lt;meter&gt;</b> Define a medição dentro de um intervalo pré-definido;</p>
+                    <p><b>&lt;nav&gt;</b> Define os links de navegação;</p>
+                    <p><b>&lt;noscript&gt;</b> Define uma seção noscript;</p>
+                    <p><b>&lt;object&gt;</b> Define um objeto incorporado;</p>
+                    <p><b>&lt;ol&gt;</b> Define uma lista ordenada;</p>
+                    <p><b>&lt;optgroup&gt;</b> Define um grupo de opção;</p>
+                    <p><b>&lt;option&gt;</b> Define uma opção de lista suspensa (drop-down list);</p>
+                    <p><b>&lt;output&gt;</b> Define os tipos de saída (outputs);</p>
+                    <p><b>&lt;p&gt;</b> Define um parágrafo;</p>
+                    <p><b>&lt;param&gt;</b> Define um parâmetro para determinado objeto;</p>
+                    <p><b>&lt;pre&gt;</b> Define um texto pré-formatado;</p>
+                    <p><b>&lt;progress&gt;</b> Define o prograsso de uma tarefa qualquer;</p>
+                    <p><b>&lt;q&gt;</b> Define uma citação curta;</p>
+                    <p><b>&lt;rp&gt;</b> Define o browser substituto para elementos não suportados pelo ruby;</p>
+                    <p><b>&lt;rt&gt;</b> Define explicações para as anotações de ruby;</p>
+                    <p><b>&lt;ruby&gt;</b> Define as anotações de ruby;</p>
+                    <p><b>&lt;s&gt;</b> Define que um texto não é mais correto;</p>
+                    <p><b>&lt;samp&gt;</b> Define um código de amostra;</p>
+                    <p><b>&lt;script&gt;</b> Define um script;</p>
+                    <p><b>&lt;section&gt;</b> Define uma área ou seção;</p>            
+                    <p><b>&lt;select&gt;</b> Define uma lista selecionável;</p>
+                    <p><b>&lt;small&gt;</b> Define um pequeno texto;</p>
+                    <p><b>&lt;source&gt;</b> Define recursos de mídia;</p>
+                    <p><b>&lt;span&gt;</b> Define uma seção no documento;</p>
+                    <p><b>&lt;strong&gt;</b> Define um texto forte (similar ao negrito);</p>
+                    <p><b>&lt;style&gt;</b> Define um estilo;</p>
+                    <p><b>&lt;sub&gt;</b> Define um texto subscrito;</p>
+                    <p><b>&lt;sup&gt;</b> Define um texto sobrescrito;</p>
+                    <p><b>&lt;summary&gt;</b> Define o cabeçalho de dados "detalhe";</p>
+                    <p><b>&lt;table&gt;</b> Define uma tabela;</p>
+                    <p><b>&lt;tbody&gt;</b> Define o corpo da tabela;</p>
+                    <p><b>&lt;td&gt;</b> Define uma célula da tabela;</p>
+                    <p><b>&lt;textarea&gt;</b> Define uma área de texto;</p>
+                    <p><b>&lt;tfoot&gt;</b> Define o rodapé da tabela;</p>
+                    <p><b>&lt;th&gt;</b> Define o cabeçalho da tabela;</p>
+                    <p><b>&lt;thead&gt;</b> Define o cabeçalho da tabela;</p>
+                    <p><b>&lt;time&gt;</b> Define uma data ou uma hora;</p>
+                    <p><b>&lt;title&gt;</b> Define o título do documento;</p>
+                    <p><b>&lt;tr&gt;</b> Define uma linha da tabela;</p>
+                    <p><b>&lt;ul&gt;</b> Define uma lista desordenada;</p>
+                    <p><b>&lt;var&gt;</b> Define uma variável;</p>
+                    <p><b>&lt;video&gt;</b> Define um vídeo;</p>
+                    <p><b>&lt;wbr&gt;</b> Define uma possível quebra de linha;</p>
                     <h2>Atributos Globais</h2>
                     <p><b>contenteditable</b> - especifica se o usuário está autorizado a editar um conteúdo ou não: true|false (verdadeiro|falso).</p>
                     <p><b>contextmenu</b> - especifica um menu contexto para um elemento. menu_id.</p>
