--- a/AprendendoLayout/vidcss.html
+++ b/AprendendoLayout/vidcss.html
@@ -26,12 +26,16 @@
         <div id="container">
             <aside id="esquerda">
                 <article>
-                    <h2>Aqui se inserem conteudo na esquerda</h2>
+                    <h2>Cursos</h2>
                 </article>
             </aside>
             <section id="principal">
                 <article>
-                    <h2>Aqui ficam as noticias e matérias</h2>
+                    <h2>Tutoriais</h2>
+                    <p>Ambient light Effects</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/nOdDtnHWaDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <h2>CSS Gradient Circle Text Animation</h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/b08cMaYjOtg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </article>
         </div>
         </section>
