Inserção de menus internos da aba html e css

--- a/AprendendoLayout/html.html
+++ b/AprendendoLayout/html.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,6 +19,15 @@
                 <li><a href="vscode.html">VS Code</a></li>
                 <li><a href="shell.html">Shell Script</a></li>
                 <li><a href="tuto.html">Tutoriais</a></li>
+            </ul>
+        </nav>
+        <nav id="submenu">
+            <ul>
+                <li><a href="_HTML/dicionario.html">Dicionário</a></li>
+                <li><a href="html.html">Dicas</a></li>
+                <li><a href="css.html">Tutoriais</a></li>
+                <li><a href="js.html">Cursos</a></li>
+                <li><a href="vidcss.html">Videos</a></li>
             </ul>
         </nav>
     </header>
@@ -201,8 +210,8 @@
                     <p><b>onvolumechange</b> - executar quando a mídia muda de volume e, também, quando o volume fica mudo.</p>
                     <p><b>onwaiting</b> - executar quando a mídia para de tocar.</p>            
                 </article>
+            </section>
         </div>
-        </section>
     </div>
 </body>
 </html>
