--- a/AprendendoLayout/links.html
+++ b/AprendendoLayout/links.html
@@ -4,3 +4,8 @@ Aba shell:
 https://manjaro-linux.com.br/forum/-t4152.html
 
 Aba index:
+
+
+
+Anotações
+dentro de cada aba de assunto, colocar paginas dedicadas aos submenus, como dicionário/dicas/tutoriais/videos e cursos.
