--- a/AprendendoLayout/css.html
+++ b/AprendendoLayout/css.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,6 +21,15 @@
                 <li><a href="tuto.html">Tutoriais</a></li>
             </ul>
         </nav>
+        <nav id="submenu">
+            <ul>
+                <li><a href="_CSS/dicionario.html">Dicionário</a></li>
+                <li><a href="html.html">Dicas</a></li>
+                <li><a href="css.html">Tutoriais</a></li>
+                <li><a href="js.html">Cursos</a></li>
+                <li><a href="_CSS/videos.html">Videos</a></li>
+            </ul>
+        </nav>
     </header>
     <div id="corpo">
         <div id="container">
@@ -30,83 +39,15 @@
                 </article>
             </aside>
             <section id="principal">
-                <article>
-                    <h2>Dicionário CSS</h2>
-            <p><b>background</b> - cor de fundo, imagem, transparência.</p>
-            <p><b>background-attachment</b> - rolagem de fundo / marca d'água.</p>
-            <p><b>background-image</b> - imagem de fundo.</p>
-            <p><b>background-color</b> - cor de fundo ou transparência.</p>
-            <p><b>background-position</b> - posicionamento da imagem de fundo.</p>
-            <p><b>background-repeat</b> - configuração lado-a-lado da imagem de fundo.</p>
-            <p><b>border</b> - largura, estilo e cor de todas as 4 bordas.</p>
-            <p><b>border-bottom</b> - largura, estilo e cor da borda inferior.</p>
-            <p><b>border-bottom-color</b> - cor da citada borda.</p>
-            <p><b>border-bottom-style</b> - estilo da citada borda.</p>
-            <p><b>border-bottom-width</b> - largura da citada borda.</p>
-            <p><b>border-color</b> - cor das 4 bordas.</p>
-            <p><b>border-left</b> - largura, estilo e cor da borda esquerda.</p>
-            <p><b>border-left-color</b> - cor da borda citada.</p>
-            <p><b>border-left-style</b> - estilo da borda citada.</p>
-            <p><b>border-left-width</b> - largura da borda citada.</p>
-            <p><b>border-right</b> - largura, estilo e cor da borda direita.</p>
-            <p><b>border-right-color</b> - cor da borda citada.</p>
-            <p><b>border-right-style</b> - estilo da borda citada.</p>
-            <p><b>border-right-width</b> - largura da borda citada.</p>
-            <p><b>border-style</b> - estilo de todas as 4 bordas.</p>
-            <p><b>border-top</b> - largura, estilo e cor da borda superior.</p>
-            <p><b>border-top-color</b> - cor da borda citada.</p>
-            <p><b>border-top-style</b> - estilo da borda citada.</p>
-            <p><b>border-top-width</b> - largura da borda citada.</p>
-            <p><b>border-width</b> - largura de todas as 4 bordas.</p>
-            <p><b>clear</b> - elementos flutuantes à esquerda ou à direita de um elemento.</p>
-            <p><b>clip</b> - parte visível de um elemento.</p>
-            <p><b>color</b> - cor de primeiro plano.</p>
-            <p><b>cursor</b> - tipo de ponteiro do mouse.</p>
-            <p><b>display</b> - se o elemento é exibido e o espaço é reservado para ele.</p>
-            <p><b>filter</b> - tipo de filtro aplicado ao elemento.</p>
-            <p><b>float</b> - se o elemento flutua.</p>
-            <p><b>font</b> - estilo, variante, peso, tamanho e altura da linha do tipo de fonte.</p>
-            <p><b>font-face</b> - incorporação da fonte ao arquivo html.</p>
-            <p><b>font-family</b> - tipo de fonte.</p>
-            <p><b>font-size</b> tamanho da fonte.</p>
-            <p><b>font-style</b> - fonte itálico.</p>
-            <p><b>font-variant</b> - fonte bold.</p>
-            <p><b>font-weight</b> - peso da fonte de claro a negrito.</p>
-            <p><b>height</b> - altura exibida ao elemento.</p>
-            <p><b>import</b> - folha de estilo a importar.</p>
-            <p><b>left</b> - posição do elemento em relação a margem esquerda da página.</p>
-            <p><b>letter-spacing</b> - distância entre as letras.</p>
-            <p><b>line-height</b> - distância entre linhas de base.</p>
-            <p><b>list-style</b> - tipo, imagem e posição do estilo da lista.</p>
-            <p><b>list-style-image</b> - marcador de item de lista.</p>
-            <p><b>list-style-position</b> - posição do marcador de item da lista.</p>
-            <p><b>list-style-type</b> - marcador de item de lista alternativo.</p>
-            <p><b>margin</b> - tamanho de todas as 4 margens.</p>
-            <p><b>margin-left</b> - tamanho da margem esquerda.</p>
-            <p><b>margin-right</b> - tamanho da margem direita.</p>
-            <p><b>margin-bottom</b> - tamanho da margem inferior.</p>
-            <p><b>margin-top</b> - tamanho da margem superior.</p>
-            <p><b>overflow</b> - exibição de imagens que são maiores do que suas molduras.</p>
-            <p><b>padding</b> - espaço em torno de um elemento em todos os lados.</p>
-            <p><b>padding-bottom</b> - espaço à partir da margem inferior de um elemento.</p>
-            <p><b>padding-left</b> - espaço à esquerda do elemento.</p>
-            <p><b>padding-right</b> - espaço à direita do elemento.</p>
-            <p><b>padding-top</b> - espaço à partir da margem superior do elemento.</p>
-            <p><b>page-brake-after</b> - inserir quebra de página depois de um elemento.</p>
-            <p><b>page-brake-before</b> - inserir quebra de página antes de um elemento.</p>
-            <p><b>position</b> - como o elemento é posicionado na página.</p>
-            <p><b>text-align</b> - alinhamento de texto.</p>
-            <p><b>text-decoration</b> - sublinhado, sobrelinhado ou riscado.</p>
-            <p><b>text-indent</b> - recuo da primeira linha do parágrafo.</p>
-            <p><b>text-transform</b> - transformação para todas maiúsculas, minúsculas ou inicial maiúscula.</p>
-            <p><b>top</b> - posição do elemento em relação a parte superior da página.</p>
-            <p><b>vertical-align</b> - alinhamento vertical do elemento.</p>
-            <p><b>visibility</b> - se o elemento é visível ou invisível.</p>
-            <p><b>width</b> - largura do elemento.</p>
-            <p><b>z-index</b> - posição do elemento na pilha.</p>
-                </article>
+                        <article>
+                            <h2>Tutoriais</h2>
+                            <p>Ambient light Effects</p>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/nOdDtnHWaDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <h2>CSS Gradient Circle Text Animation</h2>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/b08cMaYjOtg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </article>
+            </section>
         </div>
-        </section>
     </div>
 </body>
 </html>
