--- a/AprendendoLayout/js.html
+++ b/AprendendoLayout/js.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,8 +33,8 @@
                 <article>
                     <h2>Aqui ficam as noticias e matérias</h2>
                 </article>
+            </section>
         </div>
-        </section>
     </div>
 </body>
 </html>
