--- a/AprendendoLayout/js.html
+++ b/AprendendoLayout/js.html
@@ -12,13 +12,34 @@
         <h1>Aprendendo JavaScript</h1>
         <nav id="menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="html.html">HTML</a></li>
-                <li><a href="css.html">CSS</a></li>
-                <li><a href="js.html">JavaScript</a></li>
-                <li><a href="vscode.html">VS Code</a></li>
-                <li><a href="shell.html">Shell Script</a></li>
-                <li><a href="tuto.html">Tutoriais</a></li>
+                <li style="--i:rgb(59, 221, 9);--j:rgb(214, 241, 214);">
+                    <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                    <span class="tittle"><a href="index.html">Home</a></span>
+                </li>
+                <li style="--i:rgb(63, 122, 211);--j:rgb(214, 241, 214);">
+                    <span class="icon"><ion-icon name="logo-html5"></ion-icon></span>
+                    <span class="tittle"><a href="html.html">HTML</a></span>
+                </li>
+                <li style="--i:rgb(233, 183, 18);--j:rgb(214, 241, 214);">
+                    <span class="icon"><ion-icon name="logo-css3"></ion-icon></span>
+                    <span class="tittle"><a href="css.html">CSS</a></span>
+                </li>
+                <li style="--i:rgb(221, 9, 157);--j:rgb(214, 241, 214);">
+                    <span class="icon"><ion-icon name="logo-javascript"></ion-icon></span>
+                    <span class="tittle"><a href="js.html">JavaScript</a></span>
+                </li>
+                <li style="--i:rgb(175, 13, 34);--j:rgb(214, 241, 214);">
+                    <span class="icon"><ion-icon name="code-slash-outline"></ion-icon></span>
+                    <span class="tittle"><a href="vscode.html">VS Code</a></span>
+                </li>
+                <li style="--i:rgb(46, 160, 11);--j:rgb(214, 241, 214);">
+                    <span class="icon"><ion-icon name="terminal-outline"></ion-icon></span>
+                    <span class="tittle"><a href="shell.html">Shell Script</a></span>
+                </li>
+                <li style="--i:rgb(16, 28, 196);--j:rgb(214, 241, 214);">
+                    <span class="icon"><ion-icon name="film-outline"></ion-icon></span>
+                    <span class="tittle"><a href="tuto.html">Tutoriais</a></span>
+                </li>
             </ul>
         </nav>
     </header>
@@ -36,5 +57,7 @@
             </section>
         </div>
     </div>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
